Enable strict sort test

--- a/tox.ini
+++ b/tox.ini
@@ -18,5 +18,5 @@ commands =
     coverage report
     coverage xml
     -flake8 ./oval_graph ./tests setup.py
-    -isort --verbose --check-only --diff --recursive ./oval_graph ./tests setup.py
+    isort --check-only --diff ./oval_graph ./tests setup.py
     -pylint ./oval_graph ./tests setup.py
